--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "*",
+        "pragmarx/countries": "^0.7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
